--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,24 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Avenir Black, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #050015;
     margin: 0;
 }
 
 .container {
     text-align: center;
-    background: #fff;
+    background: #EFDFC5;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .controls {
-    margin-bottom: 20px;
+    margin: 20px;
+    color: rgb(134, 134, 134);
 }
 
 .dice-container {
@@ -29,16 +30,20 @@ body {
     height: 120px;
 }
 
-.dice-wrapper {
+.dice-container#meteorDice {
+    display: flex;
+    justify-content: space-around;
+    gap: 12px;
+    margin-top: 20px;
     position: relative;
-    width: 100px;
-    height: 100px;
-    overflow: hidden;
-    border: 2px solid rgb(220, 220, 220);
-    border-radius: 10px;
-    background-color: white;
-    box-shadow: 2px 1px 4px rgba(0, 0, 0, 0.1);
+    height: 120px;
 }
+
+.dice-container#meteorDice img{
+    background-color: #0D003C;
+}
+
+
 
 .dice-wrapper img {
     width: 100px;
@@ -51,21 +56,31 @@ body {
 
 .button-container {
     margin-top: 20px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .roll-button {
+    font-family: Avenir Black, sans-serif;
     margin: 0 10px;
-    padding: 10px 20px;
-    font-size: 16px;
+    padding: 20px 30px;
+    font-size: 18px;
     cursor: pointer;
     border: none;
     border-radius: 5px;
-    background-color: #007bff;
-    color: white;
+    border: 1px solid black;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    transition: all 0.2s ease;
+}
+.roll-button.meteor-button {
+    background-color: #d4b669;
+    color: rgb(207, 15, 15);
 }
 
 .roll-button:hover {
-    background-color: #0056b3;
+    background-color: #000000;
+    color:white;
 }
 
 @keyframes slide {
@@ -77,3 +92,31 @@ body {
     }
 }
 
+  @keyframes wiggle {
+    0%, 100% { transform: rotate(0deg); }
+    25% { transform: rotate(-87deg); }
+    75% { transform: rotate(95deg); }
+  }
+  
+  @keyframes shadow-pulse {
+    0%, 100% { box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.1); }
+    50% { box-shadow: 0 0 30px rgba(0, 0, 0, 0.3); }
+  }
+  
+  .dice-wrapper {
+    position: relative;
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+    /* border: 1px solid rgb(70, 70, 70); */
+    border-radius: 10px;
+    background-color: white;
+    box-shadow: 2px 1px 4px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+  }
+  
+  .wiggling {
+    animation: 
+      wiggle 0.3s ease-in-out infinite,
+      shadow-pulse 2s ease-in-out;
+  }
