--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,17 @@ body {
 .container {
     text-align: center;
     background: #EFDFC5;
-    padding: 20px;
-    border-radius: 10px;
+    padding: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 100vw;
+    height: 100vh;
+    max-width: 500px;
+    max-height: 780px;
+}
+
+.logo{
+    width: 100%;
+    max-width: 330px;
 }
 
 .controls {
@@ -23,11 +31,11 @@ body {
 
 .dice-container {
     display: flex;
-    justify-content: space-between;
-    gap: 12px;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    gap: 14px;
     margin-top: 20px;
     position: relative;
-    height: 120px;
 }
 
 .dice-container#meteorDice {
