--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ body {
 
 .roll-button {
     font-family: Avenir Black, sans-serif;
-    margin: 0 10px;
+    margin: 20px;
     padding: 20px 30px;
     font-size: 18px;
     cursor: pointer;
@@ -128,3 +128,49 @@ body {
       wiggle 0.3s ease-in-out infinite,
       shadow-pulse 2s ease-in-out;
   }
+
+
+  .accordion {
+    width: 100%;
+    max-width: 600px;
+    margin: 20px auto;
+}
+
+.accordion-item {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.accordion-button {
+    font-family: Avenir Black, sans-serif;
+    width: 100%;
+    background-color: #0000003c;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    padding: 12px;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+    font-size: 12px;
+    transition: background-color 0.3s ease;
+}
+
+.accordion-button:hover {
+    background-color: #ddd;
+}
+
+.accordion-content {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease;
+}
+
+.accordion-content form {
+    padding: 15px;
+}
+
+.accordion-content label {
+    display: block;
+    margin-bottom: 10px;
+}
